--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jade": "~1.6.0",
     "jquery": "~2.1",
     "mongoose": "~3.8.x",
-    "socket.io": "~1.2.0"
+    "socket.io": "~1.2.0",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
